syntax = "proto3";
package services.account.v1;

option csharp_namespace = "Trinsic.Services.Account.V1";
option go_package = "services/account/v1/account";
option java_package = "trinsic.services.account.v1";
option java_multiple_files = true;

import "services/options/field-options.proto";

// Account registration details
message AccountDetails
{
  // Account name
  string name = 1 [(options.optional) = true];
  // Email address of account.
  string email = 2 [(options.optional) = true, deprecated = true];
  // SMS number including country code
  string sms = 3 [(options.optional) = true, deprecated = true];
}

// Confirmation method type for two-factor workflows
enum ConfirmationMethod {
  // No confirmation required
  None = 0;
  // Email confirmation required
  Email = 1;
  // SMS confirmation required
  Sms = 2;
  // Confirmation from a connected device is required
  ConnectedDevice = 3;
  // Third-party method of confirmation is required
  Other = 10;
}

// Token protection info
message TokenProtection {
  // Indicates if token is protected using a PIN,
  // security code, HSM secret, etc.
  bool enabled = 1;
  // The method used to protect the token
  ConfirmationMethod method = 2;
}

// Device profile containing sensitive authentication data.
// This information should be stored securely
message AccountProfile {
  // The type of profile, used to differentiate between
  // protocol schemes or versions
  string profile_type = 1;
  // Auth data containg information about the current device access
  bytes auth_data = 2;
  // Secure token issued by server used to generate zero-knowledge proofs
  bytes auth_token = 3;
  // Token security information about the token.
  // If token protection is enabled, implementations must supply
  // protection secret before using the token for authentication.
  TokenProtection protection = 4;
}
// Information about authentication tokens for a wallet
message WalletAuthToken {
  // Unique identifier for the token.
  // This field will match the `DeviceId` in the WalletAuthData
  string id = 1;
  // Device name/description
  optional string description = 2;
  // Date when the token was created in ISO 8601 format
  string date_created = 3;
}
